# pyuilder

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: python.yml
src/pyuilder/: __init__.py  pyuilder.py
test/: test_pyuilder.py
