[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "Pyuilder"
version = "0.0.1"
description = "Provides functionality for implementing the builder pattern in Python."
readme = "README.md"
requires-python = ">=3.8"
license = { file = "LICENSE.txt" }
keywords = ["builder", "builder_pattern", "design_patterns"]
authors = [{ name = "Kevin Jerome", email = "kjerome64@gmail.com" }]
maintainers = [{ name = "Kevin Jerome", email = "kjerome64@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = []


[project.optional-dependencies]
dev = []
test = ["pytest==8.2.0"]


[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"
"Bug Reports" = "https://github.com/pypa/sampleproject/issues"
"Funding" = "https://donate.pypi.org"
"Say Thanks!" = "http://saythanks.io/to/example"
"Source" = "https://github.com/pypa/sampleproject/"


[tool.setuptools]
package-data = { "sample" = ["*.dat"] }


[tool.ruff]
exclude = [
    ".git",
    ".mypy_cache",
    ".pytest_cache",
    ".ruff_cache",
    ".venv",
    ".vscode",
]
line-length = 88
indent-width = 4
target-version = "py312"


[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.ruff.lint]
fixable = ["ALL"]


[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402", "F401"]


[tool.ruff.lint.pydocstyle]
convention = "google"


[tool.pytest.ini_options]
testpaths = ["tests"]
